# tp-compression

./: .gitignore  dvc.yaml  params.yaml  pyproject.toml
dvclive/compress/: metrics.json
dvclive/compress/plots/metrics/: test_acc.tsv
dvclive/train/: metrics.json
dvclive/train/plots/metrics/train/: accuracy.tsv  loss.tsv
tp_compression/: __main__.py  compress.py  data.py  train.py
tp_compression/models/: alexnet.py
